--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,13 +1,8 @@
-name: Deploy to GitHub Pages (gh-pages branch)
-
-on:
-  push:
-    branches: ["main"]
 name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ["main", "master", "work"]
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
@@ -19,29 +14,11 @@ concurrency:
 
 jobs:
   deploy:
-jobs:
-  deploy:
-    branches: ["main", "master"]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: pages
-  group: "pages"
-  cancel-in-progress: true
-
-jobs:
-  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Node
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -49,7 +26,6 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm install
         run: npm ci
 
       - name: Build
@@ -58,42 +34,10 @@ jobs:
       - name: Add .nojekyll
         run: touch build/.nojekyll
 
-      - name: Deploy build to gh-pages
+      - name: Deploy to gh-pages branch
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
           publish_branch: gh-pages
-          publish_dir: ./build
           force_orphan: true
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./build
-
-      - name: Deploy build to gh-pages branch
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
-          force_orphan: true
-
-  deploy_pages:
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./build
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages (Actions source)
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
